fix common interests not showing up

--- a/client/src/components/Search/Search.scss
+++ b/client/src/components/Search/Search.scss
@@ -23,7 +23,7 @@
   }
 }
 
-.list-item {
+.request-card {
   padding: 0.5em;
   margin: 0.4em;
   list-style-type: none;
